# vectorizer-experiments

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  EMULATE_LIMITATION.md  Makefile
docs/old/: asm_change.md  compare.md  compare_db1.md  dlmul-data-dependency.md  dlmul_dependent_status.md  dynamic_lmul.md  precise-mem.md  (+1 more)
emulator/: .gitignore  CLAUDE.md  README.md  build-sim.sh  build.sh  build_gem5.sh  emulate  emulate-all  env.sh  run-all-sims.sh  run-sim.sh  sim-configs.yaml
profiler/: harness_x86.c  tsvc_runtime_x86.c
scripts/: benchmark_sources.py  dlmul_bench.py  dlmul_microbench.py  dlmul_runner.py  emulate.py  emulate_all.py  generate_compare_report.py  llvm_pipeline.py  plot_precise_mem_changes.py  plot_results.py  plot_results_cmp.py  profile.py  profile_all.py  sanitize_ir.py  tsvc_helper.py  vplan_explain.py  vplan_explain_all.py
tests/: test_benchmark_sources.py  test_build_kernel.py  test_dlmul_bench.py  test_dlmul_microbench.py  test_emulate.py  test_emulate_all.py  test_generate_compare_report.py  test_plot_results.py  test_profile_all.py  test_tsvc_math_compat.py  test_tsvc_runtime.py  test_vplan_explain.py  test_vplan_explain_all.py
vf-performance/: clean.sh  pyproject.toml
vf-performance/src/vf_performance/: __init__.py  build.py  cli.py  models.py  pipeline.py  qemu.py  storage.py  tui.py
vf-performance/tests/: test_pipeline.py
vplan-diversity/: .gitignore  pyproject.toml  vplan_diversity.py
vplan-diversity/src/vplan_diversity/: __init__.py  cli.py  models.py  pipeline.py  tui.py
vplan-diversity/tests/: test_analysis.py
(+697 files in other folders)
