[project]
name = "vf-performance"
version = "0.1.0"
description = "TSVC VF cost-vs-latency dashboard for gem5"
requires-python = ">=3.10"
dependencies = ["textual>=1.0.0"]

[project.scripts]
vf-performance = "vf_performance.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
